--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -29,5 +29,20 @@ main {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 4.75rem;
     list-style: none;
+
+    .movie-skeleton{
+      width: 14.31rem;
+      height: 21.25rem;
+
+      background: #eee;
+      background: linear-gradient(110deg, #e0e0e0 8%, #b7b7b7 18%, #e0e0e0 33%);
+      background-size: 200% 800%;
+      animation: 1.5s shine infinite 
+    }
+    @keyframes shine {
+      to {
+        background-position-x: -200%;
+      }
+    }
   }
 }
