--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -6,6 +6,7 @@ nav.sidebar {
 
   max-width: 24rem;
   width: 100%;
+  height: 100vh;
 
   padding: 2rem;
 
@@ -28,5 +29,38 @@ nav.sidebar {
     flex-direction: column;
 
     width: 100%;
+  }
+
+  .loading-button{
+    font-size: 1,125rem;
+    padding: 1.1875rem 2rem;
+
+    .spinner{
+      width: 24px;
+      height: 24px;
+      animation: load3 1.4s infinite linear;
+    }
+
+    @-webkit-keyframes load3 {
+      0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+      100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
+    }
+    @keyframes load3 {
+      0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+      100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
+    }
+    
   }
 }
